--- a/force-app/main/default/classes/LeaveHistoryApexController.cls
+++ b/force-app/main/default/classes/LeaveHistoryApexController.cls
@@ -14,57 +14,8 @@
 * ====================================================================================================
 **/
 
-public without Sharing class LeaveHistoryApexController {
-    @AuraEnabled(Cacheable=true)
-    public static List<EMS_LM_Leave_History__c> getLMHistory(String stdate, String eddate, List<String> statusValues, List<String> typeValues){
-        List<EMS_LM_Leave_History__c> lh = new List<EMS_LM_Leave_History__c>();
-        String query = 'Select Id, EMS_LM_Leave_Type_Name__c,EMS_LM_Leave_Start_Date__c,EMS_LM_Current_Approver__c,' + 
-            'EMS_LM_Leave_End_Date__c,EMS_LM_Leave_Duration__c,EMS_LM_Reason__c,EMS_LM_Status__c,EMS_LM_Approved_On__c,EMS_LM_Contact__R.Name From EMS_LM_Leave_History__c ';
-        String userId = UserInfo.getUserId();
-        user u =[Select id, ContactId, Email from user where id = :userId];
-        string cid = '';
-        if(u.ContactId != null){
-            cid = u.ContactId;
-            query = query + ' where EMS_LM_Contact__c = :cid ';
-        }
-        if(u.ContactId == null){
-            Contact c = [select Id from Contact where Official_Mail__c=:u.Email AND EMS_TM_User__c = :userId Limit 1];
-            cid = c.Id;
-            query = query + ' where EMS_LM_Contact__c = :cid ';    
-        }
-        if(stdate !='' && stdate != null){
-            Date d = date.valueOf(stdate);
-            query = query + ' AND EMS_LM_Leave_Start_Date__c >= :d';    
-        }
-        if(eddate !='' && eddate != null){
-            Date d1 = date.valueOf(eddate);
-            query = query + ' AND EMS_LM_Leave_End_Date__c <= :d1';
-        } 
-        if(statusValues.size() > 0){
-            query = query + ' AND EMS_LM_Status__c IN :statusValues';
-        } 
-        if(typeValues.size() > 0){
-            query = query + ' AND EMS_LM_Leave_Type_Name__c IN :typeValues';
-        }
-        system.debug('###' +query);
-    	System.debug('### StartDate: ' + stdate);
-    	System.debug('### EndDate: ' + eddate);
-    	System.debug('### StatusValues: ' + statusValues);
-    	System.debug('## TypeValues: ' + typeValues);
-        //query = query + ' ORDER BY CreatedDate DESC Limit 5'; 
-        try{ 
-            System.debug('### try ' + query);
-            lh = Database.query(query);
-            system.debug('### leave History ' + lh);
-        }
-        catch(Exception e){
-            system.debug(e.getMessage());
-        }    
-        return lh;  
-    }
-    
-                /**
-*   {Purpose} - 
+	/**
+*   {Purpose} - This method returns a list of leave history records based on the search criteria for the my request tab
 *
 *   CHANGE HISTORY
 *   ====================================================================================================
@@ -72,110 +23,7 @@ public without Sharing class LeaveHistoryApexController {
 *   N/A         N/A                     N/A
 *   ====================================================================================================
 **/
-    @AuraEnabled(Cacheable=true)
-   /* public static List<EMS_LM_Leave_History__c> getPendingLeaveHistory(String name,String stdate, String eddate, List<String> statusValues, List<String> typeValues){
-        List<EMS_LM_Leave_History__c> lh = new List<EMS_LM_Leave_History__c>();
-        String query = 'Select Id, EMS_LM_Leave_Type_Name__c,EMS_LM_Leave_Start_Date__c,EMS_LM_Current_Approver__c,' + 
-            'EMS_LM_Leave_End_Date__c,EMS_LM_Leave_Duration__c,EMS_LM_Reason__c,EMS_LM_Status__c,EMS_LM_Approved_On__c,EMS_LM_Contact__R.Name,EMS_LM_Approver__c,EMS_LM_2nd_Approver__c From EMS_LM_Leave_History__c ';
-        //String userId = UserInfo.getUserId();
-        user usr =[Select id, ContactId, Email from user where id = :LeaveRequestConstant.LOGGEDIN_USERID];
-        string cid = '';
-        if(usr.Id != null){
-            cid = usr.Id;
-            query = query + ' where (EMS_LM_Approver__c = :cid OR EMS_LM_2nd_Approver__c = :cid) ';
-        }
-        system.debug(query); 
-        if(stdate !='' && stdate != null) {
-            Date d = date.valueOf(stdate);
-            query = query + ' AND EMS_LM_Leave_Start_Date__c >= :d';    
-        }
-        system.debug(query); 
-        if(eddate !='' && eddate != null) {
-            Date d1 = date.valueOf(eddate);
-            query = query + ' AND EMS_LM_Leave_End_Date__c <= :d1';
-        } 
-        system.debug(query); 
-        if(statusValues.size() > 0) {
-            query = query + ' AND EMS_LM_Status__c IN :statusValues';
-        } 
-        system.debug(query); 
-        if(name !='' && name != null) {  
-            String name1 = '%'+name+'%';
-            system.debug(name1);
-            query = query + ' AND EMS_LM_Contact__R.Name Like \'%' + name + '%\'';
-        }
-        if(typeValues.size() > 0) {
-            query = query + ' AND EMS_LM_Leave_Type_Name__c IN :typeValues';
-        }
-        system.debug(query);  
-        //query = query + ' ORDER BY CreatedDate DESC Limit 5';
-        
-        system.debug(query);      
-        try{ 
-            lh = Database.query(query);
-            system.debug(lh);
-        }
-        catch(Exception e) {
-            system.debug(e.getMessage());
-        }    
-        return lh;  
-    }*/
-    public static List<EMS_LM_Leave_History__c> getPendingLeaveHistory(String name, String stdate, String eddate, List<String> statusValues, List<String> typeValues) {
-    List<EMS_LM_Leave_History__c> lh = new List<EMS_LM_Leave_History__c>();
-    String query = 'SELECT Id, EMS_LM_Leave_Type_Name__c, EMS_LM_Leave_Start_Date__c, EMS_LM_Current_Approver__c, EMS_LM_Leave_End_Date__c, EMS_LM_Leave_Duration__c, EMS_LM_Reason__c, EMS_LM_Status__c, EMS_LM_Approved_On__c, EMS_LM_Contact__R.Name, EMS_LM_Approver__c, EMS_LM_2nd_Approver__c FROM EMS_LM_Leave_History__c';
-    
-    String cid = UserInfo.getUserId();
-    if (stdate != null && stdate != '') {
-        Date d = Date.valueOf(stdate);
-        query += ' WHERE EMS_LM_Leave_Start_Date__c >= :d';
-    }
-    if (eddate != null && eddate != '') {
-        Date d1 = Date.valueOf(eddate);
-        if (query.contains('WHERE')) {
-            query += ' AND EMS_LM_Leave_End_Date__c <= :d1';
-        } else {
-            query += ' WHERE EMS_LM_Leave_End_Date__c <= :d1';
-        }
-    }
-    if (!statusValues.isEmpty()) {
-        if (query.contains('WHERE')) {
-            query += ' AND EMS_LM_Status__c IN :statusValues';
-        } else {
-            query += ' WHERE EMS_LM_Status__c IN :statusValues';
-        }
-    }
-    if (name != null && name != '') {  
-        String name1 = '%' + name + '%';
-        if (query.contains('WHERE')) {
-            query += ' AND EMS_LM_Contact__R.Name LIKE :name1';
-        } else {
-            query += ' WHERE EMS_LM_Contact__R.Name LIKE :name1';
-        }
-    }
-    if (!typeValues.isEmpty()) {
-        if (query.contains('WHERE')) {
-            query += ' AND EMS_LM_Leave_Type_Name__c IN :typeValues';
-        } else {
-            query += ' WHERE EMS_LM_Leave_Type_Name__c IN :typeValues';
-        }
-    }
-    query += ' AND (EMS_LM_Approver__c = :cid OR EMS_LM_2nd_Approver__c = :cid)';
-    System.debug('Query: ' + query);
-    System.debug('Name: ' + name);
-    System.debug('StartDate: ' + stdate);
-    System.debug('EndDate: ' + eddate);
-    System.debug('StatusValues: ' + statusValues);
-    System.debug('TypeValues: ' + typeValues);
-    
-    try { 
-        lh = Database.query(query);
-    } catch (Exception e) {
-        System.debug(e.getMessage());
-    }    
-    return lh;  
-}
-
-    
+public without Sharing class LeaveHistoryApexController {
                 /**
 *   {Purpose} - Method used to get Leave Types based on the LoggedIn user.
 *
@@ -273,41 +121,6 @@ public without Sharing class LeaveHistoryApexController {
         public  Boolean autoApproval {get; set;}
     }
 
-                /**
-*   {Purpose} - Method used to show default pending or approver 1 pending records on My Request tab.
-*
-*   CHANGE HISTORY
-*   ====================================================================================================
-*   Date        Name                    Description
-*   N/A         N/A                     N/A
-*   ====================================================================================================
-**/
-    
-    @AuraEnabled(Cacheable=true)
-    public static List<EMS_LM_Leave_History__c> defaultMyRequestData(){
-        user usr =[Select Id, ContactId, Email from user where Id =: LeaveRequestConstant.LOGGEDIN_USERID];
-        List<EMS_LM_Leave_History__c> myLeaveReq = [SELECT Id,
-                                                    	   EMS_LM_Leave_Type_Name__c,
-                                                    	   EMS_LM_Leave_Start_Date__c,
-                                                    	   EMS_LM_Current_Approver__c, 
-                                                    	   EMS_LM_Leave_End_Date__c,
-                                                    	   EMS_LM_Leave_Duration__c,
-                                                    	   EMS_LM_Reason__c,
-                                                    	   EMS_LM_Status__c,
-                                                           EMS_LM_Approved_On__c,
-                                                    	   EMS_LM_Contact__c,
-                                                    	   EMS_LM_Auto_Approve__c,
-                                                    	   CreatedDate,
-                                                    	   CreatedById
-                                                    FROM EMS_LM_Leave_History__c
-                                                    WHERE EMS_LM_Contact__c =:usr.ContactId
-                                                    AND (EMS_LM_Status__c =: LeaveRequestConstant.PENDING 
-                                                    OR  EMS_LM_Status__c =: LeaveRequestConstant.APPROVER_2_WAITING
-                                                    OR EMS_LM_Status__c =: LeaveRequestConstant.AUTO_APPROVED)
-                                                    ORDER BY CreatedDate DESC, EMS_LM_Status__c DESC
-                                                    ];
-        return myLeaveReq;
-    }
     
                 /**
 *   {Purpose} - Method used to show default pending or approver 1 pending records on Pending on me tab.
@@ -319,28 +132,22 @@ public without Sharing class LeaveHistoryApexController {
 *   ====================================================================================================
 **/
     @AuraEnabled(Cacheable=true)
-    public static List<EMS_LM_Leave_History__c> pendingOnMeLeaveReq(){
-        List<EMS_LM_Leave_History__c> mypendingReq = [SELECT Id,
-                                                     	     EMS_LM_Leave_Type_Name__c,
-                                                      		 EMS_LM_Leave_Start_Date__c,
-                                                             EMS_LM_Current_Approver__c, 
-            												 EMS_LM_Leave_End_Date__c,
-                                                      		 EMS_LM_Leave_Duration__c,
-                                                      		 EMS_LM_Reason__c,
-                                                      		 EMS_LM_Status__c,
-                                                      		 EMS_LM_Approved_On__c,
-                                                      	     EMS_LM_Contact__r.Name,
-                                                             EMS_LM_Approver__c,
-                                                             EMS_LM_2nd_Approver__c
-                                                       FROM EMS_LM_Leave_History__c
-                                                       WHERE (EMS_LM_Approver__c =:LeaveRequestConstant.LOGGEDIN_USERID
-                                                       OR EMS_LM_2nd_Approver__c =:LeaveRequestConstant.LOGGEDIN_USERID)
-                                                       AND (EMS_LM_Status__c =: LeaveRequestConstant.PENDING 
-                                                       OR  EMS_LM_Status__c =: LeaveRequestConstant.APPROVER_2_WAITING)
-                                                       //ORDER BY CreatedDate DESC Limit 5
-                                                     		 ];
-        return mypendingReq;
-    }
-    
-    
+    public static Integer getLoggedInUserResReportsSize () {
+        User usr = [SELECT Id, 
+						   contactId__c
+                    FROM User
+                    WHERE Id =: LeaveRequestConstant.LOGGEDIN_USERID];
+        
+        List <Resource_Resource_Relationship__c> rrrList = [ SELECT Id, 
+            														Resource__c, 
+            														Resource_Reports_To__c,
+            														Resource_Reports_To_User__c, 
+            														Reports_To_Role__c
+            												 FROM Resource_Resource_Relationship__c 
+                                                             WHERE Resource_Reports_To_User__c != null 
+                                                             AND  Resource_Reports_To__c =: usr.ContactId__c 
+                                             				];
+        Integer intList = rrrList.size();        
+		return intList;
+        }
 }
